fix overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,10 @@ body {
     @apply bg-[#04123f] min-h-screen text-white overflow-hidden;
 }
 
+#root{
+    @apply min-h-screen m-0 p-0 overflow-hidden;
+}
+
 $priColor: #E04E5E;
 
 .questionBox {
